fix: prevent horizontal overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ html {
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 body {
